refactor: upgrade to Java 21 conventions