@@ -88,7 +88,7 @@ public class UsageCaseRdfXmlTests extends UsageCaseBase {
         ArrayList<String> capabilityURLsUsingRdfXml =
                 TestsBase.getCapabilityURLsUsingRdfXml(
                         OSLCConstants.CREATION_PROP, serviceUrls, useDefaultUsageForCreation, null);
-        currentUrl = capabilityURLsUsingRdfXml.get(0);
+        currentUrl = capabilityURLsUsingRdfXml.getFirst();
 
         // Creates the asset
         assetUrl = createAsset(rdfXmlCreateTemplate);
